# rtiow

./: CMakeLists.txt  camera.cpp  camera.h  hittable.cpp  hittable.h  main.cpp  material.cpp  material.h  random.cpp  random.h  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  vec.h
materials/: dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
